objects/LLC_BI__Pricing_Matrix__c.object
<CustomObject>
    <description>Use the Pricing Matrix object to import variables--such as credit score ranges, loan value ranges, and interest rates--for a variety of products. These variables are fed to the data table and used to calculate automated pricing.</description>
    <fields>
        <fullName>LLC_BI__Credit_Score_Maximum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This number field is optional. The user manually populates this field with the high end of the credit score range.</description>
        <inlineHelpText>This number field is optional. The user manually populates this field with the high end of the credit score range.</inlineHelpText>
        <label>Maximum Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Score_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This number field is optional. The user manually populates this field with the low end of the credit score range.</description>
        <inlineHelpText>This number field is optional. The user manually populates this field with the low end of the credit score range.</inlineHelpText>
        <label>Minimum Credit Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Value__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
        <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
        <label>Index Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This system automatically populates this optional picklist with information from the Pricing Matrix to specify the index the lending rate follows.</description>
        <inlineHelpText>This system-populated field displays the index the lending rate follows.</inlineHelpText>
        <label>Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label> </label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This system-populated field displays the percentage that the system adds to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This percent field is optional. The user manually populates this field with the interest rate output for a loan with the identifying variables.</description>
        <inlineHelpText>This percent field is optional. The user manually populates this field with the interest rate output for a loan with the identifying variables.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Value_Maximum__c</fullName>
        <description>This currency field is optional. The user manually populates this field with the high end of the loan value range.</description>
        <inlineHelpText>This currency field is optional. The user manually populates this field with the high end of the loan value range.</inlineHelpText>
        <label>Maximum Loan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Value_Minimum__c</fullName>
        <description>This currency field is optional. The user manually populates this field with the low end of the loan value range.</description>
        <inlineHelpText>This currency field is optional. The user manually populates this field with the low end of the loan value range.</inlineHelpText>
        <label>Minimum Loan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Name__c</fullName>
        <description>This text field is optional. The user manually populates this field with the name of the product line being priced.</description>
        <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product line being priced.</inlineHelpText>
        <label>Product Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Name__c</fullName>
        <description>This text field is optional. The user manually populates this field with the name of the product being priced.</description>
        <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product being priced.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Name__c</fullName>
        <description>This text field is optional. The user manually populates this field with the name of the product type being priced.</description>
        <inlineHelpText>This text field is optional. The user manually populates this field with the name of the product type being priced.</inlineHelpText>
        <label>Product Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Ceiling__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix to specify the maximum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the maximum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Ceiling</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Floor__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the minimum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Region__c</fullName>
        <description>This picklist field is optional. The user manually populates this field with the name of a region. The picklist values shown here should match the picklist values in the Region field on the account.</description>
        <inlineHelpText>This picklist field is optional. The user manually populates this field with the name of a region. The picklist values shown here should match the picklist values in the Region field on the account.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US North</fullName>
                </value>
                <value>
                    <fullName>US East</fullName>
                </value>
                <value>
                    <fullName>US South</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Rate__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix with the interest rate initially applied to the loan. The rate is in effect for a given number of payments.</description>
        <inlineHelpText>This system-populated field displays the interest rate initially applied to the loan.</inlineHelpText>
        <label>Teaser Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Term__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix to indicate the number of payments the teaser rate is in effect.</description>
        <inlineHelpText>This system-populated field displays the number of payments the teaser rate is in effect.</inlineHelpText>
        <label>Teaser Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Months__c</fullName>
        <description>This number field is optional. The user manually populates this field with the term output for a loan with the identifying variables.</description>
        <inlineHelpText>This number field is optional. The user manually populates this field with the term output for a loan with the identifying variables.</inlineHelpText>
        <label>Term</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Matrix</label>
    <listViews>
        <fullName>APAC</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product_Line_Name__c</columns>
        <columns>LLC_BI__Product_Type_Name__c</columns>
        <columns>LLC_BI__Product_Name__c</columns>
        <columns>LLC_BI__Credit_Score_Maximum__c</columns>
        <columns>LLC_BI__Credit_Score_Minimum__c</columns>
        <columns>LLC_BI__Loan_Value_Maximum__c</columns>
        <columns>LLC_BI__Loan_Value_Minimum__c</columns>
        <columns>LLC_BI__Interest_Rate__c</columns>
        <columns>LLC_BI__Term_Months__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Product_Type_Name__c</field>
            <operation>contains</operation>
            <value>APAC</value>
        </filters>
        <label>APAC</label>
        <language>en_AU</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product_Line_Name__c</columns>
        <columns>LLC_BI__Product_Type_Name__c</columns>
        <columns>LLC_BI__Product_Name__c</columns>
        <columns>LLC_BI__Term_Months__c</columns>
        <columns>LLC_BI__Interest_Rate__c</columns>
        <columns>LLC_BI__Credit_Score_Minimum__c</columns>
        <columns>LLC_BI__Credit_Score_Maximum__c</columns>
        <columns>LLC_BI__Loan_Value_Minimum__c</columns>
        <columns>LLC_BI__Loan_Value_Maximum__c</columns>
        <columns>LLC_BI__Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Product_Type_Name__c</field>
            <operation>equals</operation>
            <value>Unsecured</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>